// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionSlider should render correctly 1`] = `
<Fragment>
  <div
    className="buttonWrapper"
  >
    <LeftArrow
      className="arrowBtn btnDisabled"
      onClick={[Function]}
    />
    <RightArrow
      className="arrowBtn"
      onClick={[Function]}
    />
  </div>
  <div
    className="tileContainer displayBox"
  >
    <SectionTile
      additionalStyles={
        Object {
          "offScreenTileLeft": false,
          "offScreenTileRight": false,
          "removeBorder": true,
          "tileOnScreen": true,
        }
      }
      key="0"
    >
      <p
        key="1"
      >
        hello world
      </p>
    </SectionTile>
    <SectionTile
      additionalStyles={
        Object {
          "offScreenTileLeft": false,
          "offScreenTileRight": true,
          "removeBorder": true,
          "tileOnScreen": false,
        }
      }
      key="1"
    >
      <p
        key="2"
      >
        goodbye world
      </p>
    </SectionTile>
  </div>
</Fragment>
`;

exports[`SectionSlider when clicking the right arrow and then clicking it again should render correctly 1`] = `
<Fragment>
  <div
    className="buttonWrapper"
  >
    <LeftArrow
      className="arrowBtn"
      onClick={[Function]}
    />
    <RightArrow
      className="arrowBtn btnDisabled"
      onClick={[Function]}
    />
  </div>
  <div
    className="tileContainer displayBox"
  >
    <SectionTile
      additionalStyles={
        Object {
          "offScreenTileLeft": true,
          "offScreenTileRight": false,
          "removeBorder": true,
          "tileOnScreen": false,
        }
      }
      key="0"
    >
      <p
        key="1"
      >
        hello world
      </p>
    </SectionTile>
    <SectionTile
      additionalStyles={
        Object {
          "offScreenTileLeft": false,
          "offScreenTileRight": false,
          "removeBorder": true,
          "tileOnScreen": true,
        }
      }
      key="1"
    >
      <p
        key="2"
      >
        goodbye world
      </p>
    </SectionTile>
  </div>
</Fragment>
`;

exports[`SectionSlider when clicking the right arrow and then clicking the left arrow and then clicking it again should render correctly 1`] = `
<Fragment>
  <div
    className="buttonWrapper"
  >
    <LeftArrow
      className="arrowBtn btnDisabled"
      onClick={[Function]}
    />
    <RightArrow
      className="arrowBtn"
      onClick={[Function]}
    />
  </div>
  <div
    className="tileContainer displayBox"
  >
    <SectionTile
      additionalStyles={
        Object {
          "offScreenTileLeft": false,
          "offScreenTileRight": false,
          "removeBorder": true,
          "tileOnScreen": true,
        }
      }
      key="0"
    >
      <p
        key="1"
      >
        hello world
      </p>
    </SectionTile>
    <SectionTile
      additionalStyles={
        Object {
          "offScreenTileLeft": false,
          "offScreenTileRight": true,
          "removeBorder": true,
          "tileOnScreen": false,
        }
      }
      key="1"
    >
      <p
        key="2"
      >
        goodbye world
      </p>
    </SectionTile>
  </div>
</Fragment>
`;
